# eckwms

./: .env.example  .gitignore  ANDROID_INTEGRATION.md  CLAUDE.md  Cargo.toml  INTEGRATION-WITH-INBODY.md  LICENSE  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY_AUDIT_REPORT.md  TECH_DEBT.md  app.js  create-admin.js  create_warehouses_table.sql  directory-structure.bat  directory-structure.ps1  eckwms.js  eckwms_transport_context.md  ecosystem.config.js  ideas.txt  package-lock.json  package.json  server.js  test-db-connection.js  webpack.config.js
.eck/: ARCHITECTURE.md  CONTEXT.md  DELEGATION_GUIDE.md  ENVIRONMENT.md  INFORMATION_ARCHITECTURE_PROPOSAL.md  JOURNAL.md  OPERATIONS.md  RESTRUCTURING_COMPLETE.md  ROADMAP.md  STACK.md  TECH_DEBT.md  WORKFLOWS.md
base/: boxes.json  classes.json  items.json  orders.json  places.json  users.json  usersTemp.json
base - Kopie/: boxes.json  classes.json  ini.json  items.json  orders.json
compliance/: Cargo.toml
compliance/src/: main.rs
config/: passport.js
controllers/: boxController.js  itemController.js  orderController.js  placeController.js  rmaController.js  userController.js
core/: Cargo.toml
core/src/: ai.rs  anchor.rs  audit.rs  auth.rs  db.rs  lib.rs  licensing.rs
core/src/models/: action_proof.rs  ai_inbox.rs  ai_sop.rs  ai_task.rs  ai_thought.rs  attachment.rs  checksum.rs  delivery_carrier.rs  delivery_tracking.rs  device_intake.rs  document.rs  file_resource.rs  inventory_discrepancy.rs  item.rs  location.rs  mesh_node.rs  mod.rs  move_line.rs  odoo_types.rs  order.rs  order_item_event.rs  partner.rs  picking.rs  pos.rs  product.rs  product_alias.rs  quant.rs  rack.rs  registered_device.rs  relay.rs  stock_picking_delivery.rs  sync_history.rs  sync_packet.rs  user.rs
core/src/sync/: conflict.rs  engine.rs  hedera.rs  merkle.rs  mesh_client.rs  mod.rs  relay_client.rs  security.rs  vector_clock.rs
core/src/utils/: anonymizer.rs  crypto.rs  filestore.rs  identity.rs  mod.rs  smart_tag.rs
core/src/xelixir/: admin_cert.rs  envelope.rs  mod.rs
docs/: API_STANDARDS.md  DEVICE_PAIRING_TEST_GUIDE.md  GEMINI_SERVICES.md  INTEGRATION_ARCHITECTURE.md  api-documentation-example.js  movfast-doc-with-schema.html
html/: README.md  eckwms.html  index - Copy (2).html  index - Copy.html  index - Kopie.html  index.html  indexDeutsch.html  jwt-test-page.html  link-rma.html  login.html  register.html  rmaForm - Copy.html  rmaForm.html
logs/: 2408.txt  2409.txt  2410.txt  2411.txt  2412.txt  2501.txt  2502.txt  2503.txt
middleware/: auth.js  contentTypeDebug.js  errorHandler.js  htmlInterceptor.js  htmlTranslationInterceptor.js  i18n.js  index.js  languageMiddleware.js  performance.js  requestHandler.js
migrations/: 001-integrate-with-inbody.sql  002-fix-table-creation-order.sql  003-add-device-status.sql  004-add-dynamic-rbac.sql  005-add-product-aliases.sql  006-create-system-settings.sql  007-add-warehouse-racks.sql  008-add-rack-coordinates.sql  009-add-multi-warehouse.sql  010-add-rack-rotation.sql  011-create-inventory-tables.sql
migrator/: Cargo.toml
migrator/src/: main.rs
models/: Dict.js  Item.js  betruger.js  box.js  dict.js  index.js  item.js  order.js  place.js  user.js
public/: app.js  index.html  style.css
relay/: Cargo.toml
relay/src/: main.rs
relay/src/db/: mod.rs
relay/src/handlers/: health.rs  mesh.rs  mesh_relay.rs  mod.rs  pull.rs  push.rs  register.rs  xelixir.rs
routes/: api.js  auth.js  authRoutes.js  boxRoutes.js  eckwms.js  (+12 more)
wms/: Cargo.toml
wms/src/: main.rs  web.rs
wms/src/ai/: embeddings.rs  image_optimizer.rs  loop_guard.rs  mod.rs  observer.rs  optimizer.rs  orchestrator.rs  summarization.rs  telemetry.rs  tools.rs
wms/src/handlers/: admin.rs  ai.rs  audit.rs  auth.rs  backup.rs  device.rs  exact.rs  files.rs  gdpr.rs  geo.rs  items.rs  menu.rs  mesh.rs  mod.rs  ops.rs  partners.rs  pda.rs  pickings.rs  print.rs  products.rs  proofs.rs  quants.rs  rma.rs  scraper_proxy.rs  stubs.rs  support.rs  trips.rs  users.rs  vehicles.rs  visits.rs  voice.rs  warehouse.rs  ws.rs  xelixir.rs
wms/src/middleware/: auth.rs  mesh_auth.rs  mod.rs  ops_audit.rs  service_token.rs
wms/src/services/: agent_manager.rs  backup.rs  cell_resolver.rs  geocoder.rs  mesh_relay_poller.rs  mod.rs  scheduler.rs  support.rs  xelixir_router.rs
wms/src/utils/: mod.rs
wms/tests/: bm25_bind_check.rs
wms/web/: package-lock.json  package.json  vite.config.js
wms/web/src/lib/: api.js
wms/web/src/lib/components/: GeoRouteMap.svelte  GeoRouteWidget.svelte  MeshStatus.svelte
wms/web/src/lib/stores/: authStore.js
wms/web/src/routes/dashboard/: +layout.svelte  +page.svelte
wms/web/src/routes/dashboard/ai/: +page.svelte
wms/web/src/routes/dashboard/analysis/: +page.svelte
wms/web/src/routes/dashboard/devices/: +page.svelte
wms/web/src/routes/dashboard/items/[id]/: +page.svelte
wms/web/src/routes/dashboard/print/: +page.svelte
wms/web/src/routes/dashboard/repairs/: +page.svelte
wms/web/src/routes/dashboard/repairs/[id]/: +page.svelte
wms/web/src/routes/dashboard/rma/: +page.svelte
wms/web/src/routes/dashboard/rma/[id]/: +page.svelte
wms/web/src/routes/dashboard/scrapers/: +page.svelte
wms/web/src/routes/dashboard/shipping/: +page.svelte
wms/web/src/routes/dashboard/support/[id]/: +page.svelte
wms/web/src/routes/login/: +page.svelte
wms/web/src/routes/sign/[token]/: +page.svelte
(+301 files in other folders)
