[package]
name = "eck_core"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = { version = "3", features = ["kv-surrealkv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.102"
murmur3 = "0.5"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
# Hedera HCS integration uses REST API via reqwest (avoids openssl-sys/gRPC dependency)
# The native `hedera` SDK crate requires OpenSSL which complicates Windows builds.
