[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

[dependencies]
eck_core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "bigdecimal"] }
surrealdb = { version = "3", features = ["kv-surrealkv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
crc32fast = "1.4"
base64 = "0.22"
