[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
eck_core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
governor = "0.8"
base64 = "0.22"
surrealdb = { version = "3", features = ["kv-surrealkv"] }
