[package]
name = "wms"
version = "0.1.0"
edition = "2021"

[dependencies]
eck_core = { path = "../core" }
surrealdb = { version = "3", features = ["kv-mem", "kv-surrealkv"] }
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.2"
mime_guess = "2.0"
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
anyhow = "1.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
local-ip-address = "0.6"
printpdf = { version = "0.7", features = ["embedded_images"] }
qrcode = "0.14"
image = { version = "0.25", features = ["avif", "webp"] }
rand = "0.8"
crc32fast = "1.4"
murmur3 = "0.5"
sha2 = "0.10"
hex = "0.4"
rig-core = "0.33"
schemars = "1"
regex = "1"
urlencoding = "2"
